grammar.js
    program: $ => seq(
        $._start,
        repeat(choice($._expression, $._semicolon, $._newline))
    ),

    // Function definitions.
    function_definition: $ => withPrec(PREC.FUNCTION_OR_LOOP, seq(
      field("name", choice("\\", "function")),
      repeat($._newline),
      field("parameters", $.parameters),
      repeat($._newline),
      field("body", $._expression)
    )),

    // NOTE: We include "(" and ")" as part of the rule here to allow
    // tree-sitter to create a "parameters" node in the AST even when
    // no parameters are declared for a function.
    // NOTE: See `NOTE ON NEWLINES BETWEEN PARENTHESES` above
    parameters: $ => seq(
      field("open", $._open_parenthesis),
      optional(seq(
        field("parameter", $.parameter),
        repeat(seq($.comma, field("parameter", $.parameter)))
      )),
      field("close", $._close_parenthesis)
    ),

    parameter: $ => choice(
      $._parameter_with_default,
      $._parameter_without_default
    ),

    // Note that the default is required if we see an `=`,
    // i.e. `function(x = ) {}` is not valid R code and does
    // not parse (#161).
    _parameter_with_default: $ => seq(
      $._parameter_name,
      "=",
      field("default", $._expression)
    ),

    _parameter_without_default: $ => $._parameter_name,

    if_statement: $ => withPrec(PREC.IF, seq(
      "if",
      repeat($._newline),
      field("open", $._open_parenthesis),
      field("condition", $._expression),
      field("close", $._close_parenthesis),
      repeat($._newline),
      field("consequence", $._expression),
      // No `repeat($._newline)` here. Specially handled in the scanner instead.
      optional(seq(
        $._else,
        repeat($._newline),
        field("alternative", $._expression)
      ))
    )),

    // NOTE: See `NOTE ON NEWLINES BETWEEN PARENTHESES` above
    for_statement: $ => withPrec(PREC.FUNCTION_OR_LOOP, seq(
      "for",
      repeat($._newline),
      field("open", $._open_parenthesis),
      field("variable", $._identifier),
      "in",
      field("sequence", $._expression),
      field("close", $._close_parenthesis),
      repeat($._newline),
      field("body", $._expression)
    )),

    // NOTE: See `NOTE ON NEWLINES BETWEEN PARENTHESES` above
    while_statement: $ => withPrec(PREC.FUNCTION_OR_LOOP, seq(
      "while",
      repeat($._newline),
      field("open", $._open_parenthesis),
      field("condition", $._expression),
      field("close", $._close_parenthesis),
      repeat($._newline),
      field("body", $._expression)
    )),

    repeat_statement: $ => withPrec(PREC.FUNCTION_OR_LOOP, seq(
      "repeat",
      repeat($._newline),
      field("body", $._expression)
    )),

    // Blocks.
    braced_expression: $ => withPrec(PREC.BLOCK, seq(
      field("open", $._open_brace),
      repeat(field("body", choice($._expression, $._semicolon, $._newline))),
      field("close", $._close_brace)
    )),

    // NOTE: R requires exactly 1 expression within parentheses
    // NOTE: See `NOTE ON NEWLINES BETWEEN PARENTHESES` above
    parenthesized_expression: $ => withPrec(PREC.BLOCK, seq(
      field("open", $._open_parenthesis),
      field("body", $._expression),
      field("close", $._close_parenthesis)
    )),

    // Function calls and subsetting.
    call: $ => withPrec(PREC.CALL, seq(
      field("function", $._expression),
      field("arguments", alias($.call_arguments, $.arguments))
    )),

    subset: $ => withPrec(PREC.CALL, seq(
      field("function", $._expression),
      field("arguments", alias($.subset_arguments, $.arguments))
    )),

    subset2: $ => withPrec(PREC.CALL, seq(
      field("function", $._expression),
      field("arguments", alias($.subset2_arguments, $.arguments))
    )),

    // The actual matching rules for arguments in each of the above.
    //
    // Complicated by the fact that we want to support any number
    // of sequential commas, but two arguments must be separated
    // by at least one comma.
    //
    // We accomplish this by using `delimSep1()`, but we make the
    // actual `rule` itself `optional()`.
    //
    // # Allowed
    // fn()
    // fn(,)
    // fn(,,)
    // fn(a)
    // fn(a, b)
    // fn(,,a,,b,,)
    //
    // # Not allowed
    // fn(a b)
    //
    // NOTE: See `NOTE ON NEWLINES BETWEEN PARENTHESES` above
    argument: $ => choice(
      $._argument_named,
      $._argument_unnamed
    ),

    // Note that the value is optional, i.e. both of these are valid:
    // fn(a = 1)
    // fn(a = )
    _argument_named: $ => seq(
      field("name", $._argument_name_string_or_identifier_or_null),
      "=",
      optional($._argument_value)
    ),

    _argument_unnamed: $ => $._argument_value,

    unary_operator: $ => {
      const table = [
        ["?", PREC.HELP],
        ["~", PREC.TILDE],
        ["!", PREC.UNARY_NOT],
        ["+", PREC.UNARY_PLUS_MINUS],
        ["-", PREC.UNARY_PLUS_MINUS]
      ];

      return choice(...table.map(([operator, prec]) => prec.ASSOC(prec.RANK, seq(
        field("operator", operator),
        repeat($._newline),
        field("rhs", $._expression)
      ))))
    },

    // NOTE: Expressions are allowed on either side of the operator
    binary_operator: $ => {
      const table = [
        ["?", PREC.HELP],

        ["~", PREC.TILDE],

        ["<-", PREC.LEFT_ASSIGN],
        ["<<-", PREC.LEFT_ASSIGN],
        [":=", PREC.LEFT_ASSIGN],

        ["->", PREC.RIGHT_ASSIGN],
        ["->>", PREC.RIGHT_ASSIGN],

        ["=", PREC.EQUALS_ASSIGN],

        ["|", PREC.OR],
        ["&", PREC.AND],

        ["||", PREC.OR],
        ["&&", PREC.AND],

        ["<", PREC.COMPARISON],
        ["<=", PREC.COMPARISON],
        [">", PREC.COMPARISON],
        [">=", PREC.COMPARISON],
        ["==", PREC.COMPARISON],
        ["!=", PREC.COMPARISON],

        ["+", PREC.PLUS_MINUS],
        ["-", PREC.PLUS_MINUS],
        ["*", PREC.MULTIPLY_DIVIDE],
        ["/", PREC.MULTIPLY_DIVIDE],
        ["**", PREC.EXPONENTIATE],
        ["^", PREC.EXPONENTIATE],

        // Special infix operator
        // Regex: Between two `%`, anything but another `%`, `\`, or `\n`.
        // Includes primitives `%%` and `%/%`.
        // Alias is used for targeting in `highlights.scm`.
        // TODO: This could probably be fine tuned to disallow more things.
        [alias(/%[^%\\\n]*%/, "special"), PREC.SPECIAL_OR_PIPE],
        ["|>", PREC.SPECIAL_OR_PIPE],

        [":", PREC.COLON]
      ];

      return choice(...table.map(([operator, prec]) => prec.ASSOC(prec.RANK, seq(
        field("lhs", $._expression),
        field("operator", operator),
        repeat($._newline),
        field("rhs", $._expression)
      ))))
    },

    // NOTE: Expression on LHS, string/identifier on RHS
    extract_operator: $ => {
      const table = [
        ["$", PREC.EXTRACT],
        ["@", PREC.EXTRACT]
      ];

      return choice(...table.map(([operator, prec]) => prec.ASSOC(prec.RANK, seq(
        field("lhs", $._expression),
        field("operator", operator),
        repeat($._newline),
        optional(field("rhs", $._string_or_identifier))
      ))))
    },

    // NOTE: No newlines are allowed. String/identifier on both LHS and RHS.
    namespace_operator: $ => {
      const table = [
        ["::", PREC.NAMESPACE],
        [":::", PREC.NAMESPACE]
      ];

      return choice(...table.map(([operator, prec]) => prec.ASSOC(prec.RANK, seq(
        field("lhs", $._string_or_identifier),
        field("operator", operator),
        optional(field("rhs", $._string_or_identifier))
      ))))
    },

    // Numeric literals.
    float: $ => $._float_literal,

    // NOTE: See `?NumericConstants` for precise details
    //
    // For hexadecimal:
    // - '0'
    // - 'x' or 'X'
    // - Non-empty sequence of '[0-9a-fA-F.]' restricted to at most 1 '.'
    //   - LHS `([0-9a-fA-F]+(\.[0-9a-fA-F]*)?)` handles 0x1, 0x1.2
    //   - RHS `(\.[0-9a-fA-F]*)` handles 0x.1, and 0x. (surprisingly R allows this)
    // - Optional binary exponent of:
    //   - 'p' or 'P'
    //   - Optional '+' or '-'
    //   - Non-empty sequence of '[0-9]'
    _float_literal: $ => choice($._hex_literal, $._number_literal),

    // Strings.
    string: $ => choice(
      $._raw_string_literal,
      $._single_quoted_string,
      $._double_quoted_string
    ),

    // TODO: Raw string contents, something like this, where `_raw_string_open`,
    // `_raw_string_close`, and `_raw_string_content` are externals.
    // _raw_string_literal: $ => seq(
    //   field("open", $._raw_string_open),
    //   optional(field("content", alias($._raw_string_content, $.string_content))),
    //   field("close", $._raw_string_close)
    // ),

    // Explanation is:
    // - Between two quote characters, allow either:
    //   - Anything except `'` (or `"`) or `\`
    //   - An escape sequence
    _single_quoted_string: $ => seq(
      field("open", '\''),
      optional(field("content", alias($._single_quoted_string_content, $.string_content))),
      field("close", '\'')
    ),

    _double_quoted_string: $ => seq(
      field("open", '"'),
      optional(field("content", alias($._double_quoted_string_content, $.string_content))),
      field("close", '"')
    ),

    dots: $ => "...",
    dot_dot_i: $ => /[.][.]\d+/,

    // Identifiers.
    // NOTE: `_` isn't a valid way to start an R identifier, but we are a little
    // lax here and parse it anyways. One reason is because want to support a lone `_` as
    // the pipe placeholder identifier. It could be included as a separate `"_"` choice,
    // but then `_foo` parses as two identifiers: `_` and `foo`, making it impossible to
    // check that `_foo` is an invalid identifier. It seems simpler to parse `_foo` as a
    // single identifier, and then let downstream consumers do further checks on the
    // validity as needed (#71).
    // NOTE: Due to the linked tree-sitter discussion, if `_unquoted_identifier` and
    // `_quoted_identifier` are their own hidden terminal rules, then we can't detect error
    // recovered `identifier`s as missing with `ts_node_is_missing()`. The workaround used
    // here inlines the regexes, and wraps the `choice()` call in a single terminal
    // `token()` so `identifier` can still be used as the `word` rule.
    // https://github.com/tree-sitter/tree-sitter/issues/3332
    // NOTE: Do not use this directly in the grammar, use `_identifier` instead!
    identifier: $ => {
      const _unquoted_identifier = /[\p{XID_Start}._][\p{XID_Continue}.]*/;
      const _quoted_identifier = /`((?:\\(.|\n))|[^`\\])*`/;

      return token(
        choice(
          _unquoted_identifier,
          _quoted_identifier
        )
      )
    },

    // NOTE: This is the actual "identifier" used throughout the grammar. R
    // treats `...` and `..i` exactly the same as any other `identifier`
    // throughout the R grammar. In theory, we could collapse `dots` and
    // `dot_dot_i` into `identifier`, but downstream consumers sometimes
    // highlight `dots` and `dot_dot_i` differently than other identifiers. This
    // is supported by the fact that `...` and `..i` are "reserved words" in R,
    // see `?Reserved`. We also considered nesting `dots` and `dot_dot_i` as
    // children under `identifier`, but that is complicated by the fact that we
    // use `identifier` as the `word`, so it needs to be a token (#157, #176).
    _identifier: $ => choice(
      $.dots,
      $.dot_dot_i,
      $.identifier
    ),

    _string_or_identifier: $ => choice(
      $.string,
      $._identifier
    ),

    // NOTE: This is only for use in `_argument_named`
    //
    // This is extremely similar to `_string_or_identifier`,
    // but there are two differences outlined below
    //
    // # Usage of `prec(1, )`
    //
    // Since `_argument_unnamed` can be an arbitrary `_expression` (with
    // precedence 0) which includes `string`, `identifier`, `dots`, `dot_dot_i`,
    // and `null`, there is an ambiguity between:
    // - Starting the `value` of an `_argument_unnamed`
    // - Starting the `name` of an `_argument_named`
    //
    // We set a higher precedence here to try and match `_argument_named` first.
    //
    // # Inclusion of `null`
    //
    // Since the beginning of R, `NULL` has surprisingly been allowed in
    // function argument name position, like `fn(NULL = 1)` and `fn(NULL = )`.
    // This is surprising because numeric constants like `NA` and `Inf` are not
    // allowed here, and `NULL` isn't specially allowed anywhere else you might
    // expect it to be special cased, like `x$NULL` or `function(NULL) {}` (#164).
    next: $ => "next",
    break: $ => "break",
    true: $ => "TRUE",
    false: $ => "FALSE",
    null: $ => "NULL",
    nan: $ => "NaN",
    na: $ => choice(
      "NA",
      "NA_integer_",
      "NA_real_",
      "NA_complex_",
      "NA_character_"
    ),

    // A general R expression.
    _expression: $ => choice(
      $.function_definition,

      $.if_statement,
      $.for_statement,
      $.while_statement,
      $.repeat_statement,

      $.braced_expression,
      $.parenthesized_expression,

      $.call,
      $.subset,
      $.subset2,

      $.unary_operator,
      $.binary_operator,
      $.extract_operator,
      $.namespace_operator,

      $.integer,
      $.complex,
      $.float,

      $.string,

      $.identifier,
      $.dots,
      $.dot_dot_i,

      $.next,
      $.break,
      $.true,
      $.false,
      $.null,
      $.inf,
      $.nan,
      $.na
    ),

    // Comments.
    comment: $ => token(withPrec(PREC.COMMENT, /#.*/)),

    // Commas. We include these in the AST so we can figure out the
    // argument call position. This is necessary given how R tolerates
    // missing arguments in function calls.
    comma: $ => ",",

    // Provide aliasing of some key externals.
    // This gives `highlights.scm` something to target for
    // `@punctuation.bracket` and `@keyword`.
    _else: $ => alias($._external_else, "else"),
    _open_parenthesis: $ => alias($._external_open_parenthesis, "("),
    _close_parenthesis: $ => alias($._external_close_parenthesis, ")"),
    _open_brace: $ => alias($._external_open_brace, "{"),
    _close_brace: $ => alias($._external_close_brace, "}"),
